# neon

./: .babelrc  .editorconfig  .gitignore  .npmignore  .nvmrc  .prettierignore  .rustfmt.toml  .travis.yml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MIGRATION_GUIDE.md  MIGRATION_GUIDE_0.10.md  Makefile  README ELECTRON 4.md  README.md  RELEASES.md  appveyor.yml  build.rs  codecov.yml  index.js  package-lock.json  package.json  tsconfig.json
bench/: .gitignore  Cargo.toml  README.md  index.js  package-lock.json  package.json
bench/src/: lib.rs
crates/nanny-sys/: Cargo.toml  binding.gyp  build.rs  package.json
crates/nanny-sys/src/: lib.rs  nanny.cc  nanny.h  raw.rs
crates/neon/: Cargo.toml
crates/neon-build/: Cargo.toml  build.rs
crates/neon-build/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/neon-build/src/legacy/: linux.rs  mod.rs  windows.rs
crates/neon-build/src/napi/: macos.rs  mod.rs  windows.rs
crates/neon-macros/: Cargo.toml
crates/neon-macros/src/: error.rs  legacy.rs  lib.rs  name.rs  napi.rs
crates/neon-macros/src/class/: meta.rs  mod.rs
crates/neon-macros/src/export/: class.rs  function.rs  global.rs  meta.rs  mod.rs
crates/neon-macros/src/export/class/: meta.rs
crates/neon-macros/src/export/function/: meta.rs  mod.rs
crates/neon-macros/src/export/global/: meta.rs  mod.rs
crates/neon-runtime/: Cargo.toml  build.rs  package-lock.json  package.json
crates/neon-runtime/native-napi/: binding.gyp  package.json
crates/neon-runtime/native-napi/src/: neon.cc  neon.h
crates/neon-runtime/native/src/: neon.cc  neon.h  neon_class_metadata.h  neon_event_handler.h  neon_threadsafe_cb.h
crates/neon-runtime/src/: array.rs  arraybuffer.rs  async_callback.rs  buffer.rs  call.rs  callback.rs  class.rs  convert.rs  error.rs  eventhandler.rs  fun.rs  lib.rs  mem.rs  module.rs  neon.cc  neon.h  neon_async_callback.h  neon_callback.h  neon_string.h  neon_task.h  object.rs  primitive.rs  raw.rs  scope.rs  string.rs  tag.rs  task.rs  threadsafecb.rs  win_delay_load_hook.cc
crates/neon-runtime/src/nan/: array.rs  arraybuffer.rs  buffer.rs  call.rs  class.rs  convert.rs  error.rs  fun.rs  handler.rs  mem.rs  mod.rs  module.rs  object.rs  primitive.rs  raw.rs  scope.rs  string.rs  tag.rs  task.rs  threadsafecb.rs  try_catch.rs
crates/neon-runtime/src/napi/: array.rs  arraybuffer.rs  async_work.rs  bigint.rs  bindings.rs  buffer.rs  call.rs  class.rs  convert.rs  date.rs  error.rs  external.rs  fun.rs  handler.rs  lifecycle.rs  mem.rs  mod.rs  napi.rs  no_panic.rs  object.rs  primitive.rs  promise.rs  raw.rs  reference.rs  scope.rs  string.rs  tag.rs  task.rs  tsfn.rs  typedarray.rs
crates/neon-runtime/src/napi/bindings/: functions.rs  mod.rs  types.rs
crates/neon-sys/: Cargo.toml  binding.gyp  build.rs  package.json
crates/neon-sys/native/: binding.gyp  package-lock.json  package.json
crates/neon-sys/native/src/: neon.cc  neon.h  neon_event.h  neon_task.h
crates/neon-sys/src/: array.rs  buf.rs  buffer.rs  call.rs  class.rs  convert.rs  error.rs  fun.rs  lib.rs  mem.rs  module.rs  neon.cc  neon.h  neon_class_metadata.h  object.rs  primitive.rs  raw.rs  scope.rs  string.rs  tag.rs
crates/neon/src/: lib.rs  lifecycle.rs  macros.rs  meta.rs  prelude.rs  reflect.rs  types_docs.rs
crates/neon/src/async_local/: mod.rs  runtime.rs  waker.rs
crates/neon/src/async_local/runtime/: futures_count.rs  mod.rs  runtime.rs  (+1 more)
crates/neon/src/asynch/: libuv.rs  mod.rs  root.rs  runtime.rs
crates/neon/src/context/: internal.rs  mod.rs
crates/neon/src/event/: channel.rs  mod.rs  task.rs
crates/neon/src/executor/: mod.rs  tokio.rs
crates/neon/src/extract/: mod.rs
crates/neon/src/function/: mod.rs
crates/neon/src/handle/: js_rc.rs  mod.rs  root.rs  root_global.rs  root_object.rs  root_value.rs
crates/neon/src/instance/: mod.rs
crates/neon/src/macro_internal/: export.rs  futures.rs  mod.rs
crates/neon/src/node/: console.rs  mod.rs  process.rs
crates/neon/src/object/: class.rs  mod.rs  wrap.rs
crates/neon/src/result/: mod.rs
crates/neon/src/runtime/: mod.rs  tokio.rs
crates/neon/src/serde/: args.rs  de.rs  mod.rs  se.rs  ser.rs  sys.rs
crates/neon/src/sys/: array.rs  arraybuffer.rs  async_work.rs  buffer.rs  call.rs  convert.rs  date.rs  debug_send_wrapper.rs  error.rs  external.rs  fun.rs  lifecycle.rs  mem.rs  mod.rs  no_panic.rs  object.rs  primitive.rs  promise.rs  raw.rs  reference.rs  scope.rs  string.rs  symbol.rs  tag.rs  tsfn.rs  typedarray.rs
crates/neon/src/thread/: mod.rs
crates/neon/src/types/: date.rs  mod.rs  private.rs  promise.rs
crates/neon/src/types_impl/: bigint.rs  boxed.rs  date.rs  error.rs  map.rs  mod.rs  private.rs  promise.rs  utf8.rs
test/bench/: Cargo.toml  README.md  bench.js  package.json
test/bench/src/: lib.rs  pokemon.rs
test/dynamic/native/: Cargo.toml
test/dynamic/native/src/: lib.rs
test/electron/: Cargo.toml  README.md  index.html  main.js  main.test.js  package-lock.json  package.json  preload.js
test/electron/native/: Cargo.toml
test/electron/native/src/: lib.rs
test/electron/test/: index.js
test/napi/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
test/napi/lib/: arrays.js  bigint.js  boxed.js  class.js  coercions.js  container.js  date.js  errors.js  export.js  extract.js  functions.js  futures.js  hello.js  map.js  node.js  numbers.js  objects.js  serde.js  strings.js  symbols.js  sync.js  tasks.js  threads.js  typedarrays.js  types.js  workers.js
test/napi/native/: Cargo.toml
test/napi/native/src/: lib.rs
test/napi/src/: lib.rs
test/napi/src/js/: bigint.rs  boxed.rs  class.rs  coercions.rs  container.rs  date.rs  errors.rs  export.rs  extract.rs  functions.rs  futures.rs  map.rs  node.rs  objects.rs  serde.rs  strings.rs  symbols.rs  sync.rs  threads.rs  typedarrays.rs  types.rs  workers.rs
test/napi/test/: errors.js  functions.js  hello.js  numbers.js
test/rust-2024/: Cargo.toml  README.md  package.json
test/rust-2024/src/: lib.rs
test/tokio/: Cargo.toml  index.js  package.json
test/tokio/src/: lib.rs
(+503 files in other folders)
