[package]
name = "neon"
version = "0.10.0"
authors = ["Dave Herman <david.herman@gmail.com>"]
description = "A safe abstraction layer for Node.js."
readme = "README.md"
homepage = "https://www.neon-bindings.com"
repository = "https://github.com/neon-bindings/neon"
license = "MIT/Apache-2.0"
exclude = ["neon.jpg", "doc/**/*"]
build = "build.rs"
edition = "2018"

[dev-dependencies]
semver = "0.9"
psd = "0.1.9"     # used for a doc example
failure = "0.1.5" # used for a doc example

[dependencies]
semver = "0.9.0"
smallvec = "1.4.2"
neon-runtime = { version = "=0.10.0", path = "crates/neon-runtime" }
neon-macros = { version = "=0.10.0", path = "crates/neon-macros", features = ["napi"] }

[features]
default = ["napi-1"]

# Enable static tests. These can be fragile because of variations in Rust compiler
# error message formatting from version to version, so they're disabled by default.
# TODO: https://github.com/neon-bindings/neon/issues/871
enable-static-tests = []

# Enable the EventHandler API of RFC 25.
# DEPRECATED: Will be removed with `legacy-runtime`
event-handler-api = []

# Enable the default panic hook. Useful for debugging neon itself.
# DEPRECATED: Will be removed with `legacy-runtime`
default-panic-hook = []

# Default N-API version. Prefer to select a minimum required version.
# DEPRECATED: This is an alias that should be removed
napi-runtime = ["napi-6"]

# Select the N-API version
# Feature flags to enable the experimental N-API runtime. For now, this feature
# is disabled by default.
# The Node N-API documentation specifies N-API and Node version requirements
# https://nodejs.org/api/n-api.html
napi-1 = []
napi-2 = ["napi-1", "neon-runtime/napi-2"]
napi-3 = ["napi-2", "neon-runtime/napi-3"]
napi-4 = ["napi-3", "neon-runtime/napi-4"]
napi-5 = ["napi-4", "neon-runtime/napi-5"]
napi-6 = ["napi-5", "neon-runtime/napi-6"]
napi-latest = ["napi-6"]
napi-experimental = ["napi-6", "neon-runtime/napi-experimental"]

# DEPRECATED: These perform no action and will be removed in 1.0
try-catch-api = []
channel-api = []
event-queue-api = []
promise-api = []
task-api = []

# Feature flag to include procedural macros
# DEPRECATED: Will be removed with `legacy-runtime` since it is enabled by default in Node-API backend.
proc-macros = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = [
    "napi-experimental",
]

[workspace]
members = [
    "crates/neon-macros",
    "crates/neon-runtime",
    "test/electron",
    "test/napi"
]
