[package]
name = "nanny-sys"
version = "0.0.1"
description = "Exposes Node and V8 C++ API's for use by nanny."
authors = ["Dave Herman <dherman@mozilla.com>"]
license = "MIT"

# libnanny.a gets linked in with this package
links = "nanny"

# this script builds libnanny.a
build = "build.rs"

[build-dependencies]
gcc = "0.3"

