[package]
name = "nanny-sys"
version = "0.0.3"
authors = ["Dave Herman <dherman@mozilla.com>"]
description = "Exposes Node and V8 C++ API's for use by nanny."
repository = "https://github.com/dherman/nanny"
license = "MIT"

# libnanny.a gets linked in with this package
links = "nanny"

# this script builds libnanny.a
build = "build.rs"

[build-dependencies]
gcc = "0.3"

