[package]
name = "neon-build"
version = "0.10.0"
authors = ["Dave Herman <david.herman@gmail.com>"]
description = "Build logic required for Neon projects."
repository = "https://github.com/neon-bindings/neon"
license = "MIT/Apache-2.0"
edition = "2018"
build = "build.rs"

[dependencies]
neon-sys = { version = "=0.10.0", path = "../neon-sys", optional = true }
