[package]
name = "neon-macros"
version = "1.0.0-alpha.3"
authors = ["Dave Herman <david.herman@gmail.com>"]
description = "Procedural macros supporting Neon"
repository = "https://github.com/neon-bindings/neon"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "1"
syn-mid = "0.5"
