[package]
name = "neon-macros"
version = "1.1.1"
authors = ["Dave Herman <david.herman@gmail.com>"]
description = "Procedural macros supporting Neon"
repository = "https://github.com/neon-bindings/neon"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.33"
syn = { version = "2.0.57", features = ["full"] }

[features]
# Enable `#[neon::export]`
export = []
