[package]
name = "neon-runtime"
version = "0.6.0"
authors = ["Dave Herman <david.herman@gmail.com>"]
description = "Bindings to the Node.js native addon API, used by the Neon implementation."
repository = "https://github.com/neon-bindings/neon"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
cfg-if = "1.0.0"
libloading = { version = "0.6.5", optional = true }
neon-sys = { version = "=0.6.0", path = "../neon-sys", optional = true }
smallvec = "1.4.2"

[dev-dependencies]
nodejs-sys = "0.7.0" # Not strictly needed; just here for easy manual copying

[features]
default = []
napi = ["libloading"]
docs-only = ["neon-sys/docs-only"]

[package.metadata.docs.rs]
features = ["docs-only"]
