[package]
name = "neon-sys"
version = "0.1.11"
authors = ["Dave Herman <dherman@mozilla.com>"]
description = "Exposes Node and V8 C++ API's for use by Neon."
repository = "https://github.com/neon-bindings/neon"
license = "MIT/Apache-2.0"

# libneon.a gets linked in with this package
links = "neon"

# this script builds libneon.a
build = "build.rs"

[dependencies]
cslice = { version = "=0.1.1", path = "../cslice" }

[build-dependencies]
gcc = "0.3"
