[package]
name = "neon-bench"
version = "0.1.0"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
criterion = "0.4"
once_cell = "1"
pprof = { version = "0.11", features = ["prost-codec", "frame-pointer"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.neon]
version = "1.0.0-alpha.2"
path = "../../crates/neon"
features = ["external-buffers", "futures", "napi-experimental", "serde"]
