[package]
name = "napi-tests"
version = "0.1.0"
authors = ["The Neon Community <david.herman@gmail.com>"]
license = "MIT"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dependencies.neon]
version = "1.0.0-alpha.2"
path = "../../crates/neon"
features = ["external-buffers", "futures", "napi-experimental", "serde"]
