[package]
name = "napi-tests"
version = "0.1.0"
authors = ["The Neon Community <david.herman@gmail.com>"]
license = "MIT"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
num-bigint-dig = "0.8"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dependencies.neon]
version = "1.0.0-alpha.2"
path = "../../crates/neon"
features = ["futures", "napi-experimental", "external-buffers"]
