[package]
name = "napi-tests"
version = "0.1.0"
authors = ["The Neon Community <david.herman@gmail.com>"]
license = "MIT"
exclude = ["artifacts.json", "index.node"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
num-bigint-dig = "0.8.4"
once_cell = "1.18.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }

[dependencies.neon]
version = "1.0.0"
path = "../../crates/neon"
features = ["futures", "napi-experimental", "external-buffers"]
