[package]
name = "rust-2024"
version = "0.1.0"
description = "Test Neon with Rust 2024 Edition"
authors = ["Dave Herman <david.herman@gmail.com>"]
license = "MIT"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.neon]
path = "../../crates/neon"
features = ["futures", "napi-experimental", "external-buffers", "serde", "tokio"]
