[package]
name = "tokio-test"
version = "0.1.0"
authors = ["The Neon Community <david.herman@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "tokio_test"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = {version = "*", path = "../../crates/neon-build"}

[dependencies]
once_cell = "1"
tokio = { version = "0.3", features = ["rt-multi-thread"] }

[dependencies.neon]
version = "*"
path = "../.."
default-features = false
features = ["default-panic-hook", "napi-runtime", "try-catch-api"]
