[package]
name = "tests"
version = "0.1.0"
authors = ["The Neon Community"]
license = "MIT/Apache-2.0"
build = "build.rs"
edition = "2018"

[lib]
name = "tests"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = {version = "*", path = "../../../crates/neon-build"}

[dependencies.neon]
version = "*"
path = "../../../"
features = ["event-handler-api", "proc-macros", "try-catch-api"]
