[package]
name = "napi"
version = "0.1.0"
authors = ["The Neon Community <david.herman@gmail.com>"]
license = "MIT"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "napi"
crate-type = ["cdylib"]

[dependencies.neon]
version = "*"
path = "../../../"
default-features = false
features = ["default-panic-hook", "napi-runtime", "try-catch-api"]
